# sates_cpp

./: .gitignore  LICENSE
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sates_cpp.sln
build_win/sates/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  sates.sln  sates.vcxproj  sates.vcxproj.filters
build_win/sates_main/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  sates_main.sln  sates_main.vcxproj  sates_main.vcxproj.filters
build_win/test_for_deploy/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  test_for_deploy.sln  test_for_deploy.vcxproj  test_for_deploy.vcxproj.filters
build_win/test_with_sates_main/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  test_with_sates_main.sln  test_with_sates_main.vcxproj  test_with_sates_main.vcxproj.filters
build_win/test_without_sates_main/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  test_without_sates_main.sln  test_without_sates_main.vcxproj  (+1 more)
code/: CMakeLists.txt  CMakeSettings.json
code/sates/: CMakeLists.txt  define.h  sates.h  sates_test_cpp_deploy.cpp  sates_test_cpp_deploy.h  sates_test_cpp_deploy_internal.cpp
code/sates/common/: arg_parser.cpp  arg_parser.h  arg_sates_output.cpp  arg_sates_output.h  err_proc.cpp  err_proc.h  stdout_color.cpp  stdout_color.h
code/sates/internal_use/: common_func.cpp  common_func.h  sates_test_cpp_deploy_internal.cpp  stdout_color.cpp  stdout_color.h  test_list_editor.cpp  test_list_editor.h  test_log.cpp  test_log.h  test_macro.h  test_runner.cpp  test_runner.h  testcode.cpp  testcode.h  testcode_list.cpp  testcode_list.h
code/sates/report/: plain_text_stdout.cpp  plain_text_stdout.h  plain_text_writer.cpp  plain_text_writer.h  writer.cpp  writer.h  writer_factory.cpp  writer_factory.h  xml_writer.cpp  xml_writer.h
code/sates/tc/: tc_result.cpp  tc_result.h  tc_result_list.cpp  tc_result_list.h  tc_result_temporal_storage.cpp  tc_result_temporal_storage.h  test_case.cpp  test_case.h  test_case_gen.h  test_case_list.cpp  test_case_list.h
code/sates/tester/: tc_run.cpp  tc_run.h
code/sates_main/: CMakeLists.txt  sates_main.cpp
code/test_for_deploy/: CMakeLists.txt  test_for_deploy.cpp
code/test_with_sates_main/: CMakeLists.txt  test_with_sates_main.cpp
code/test_without_sates_main/: CMakeLists.txt  test_without_sates_main.cpp
script/: clean.bat
(+56 files in other folders)
